--- a/style.scss
+++ b/style.scss
@@ -273,12 +273,13 @@ nav {
 
 .wrapper-footer {
   margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+  padding: 0 10px;
 }
 
 footer {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  background-color: $lightGray;
   padding: 20px 0;
   text-align: center;
 }
