--- a/style.scss
+++ b/style.scss
@@ -273,14 +273,14 @@ nav {
 
 .wrapper-footer {
   margin-top: 50px;
-  padding: 0 10px;
+  padding: 0 25px;
 }
 
 footer {
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   background-color: $lightGray;
-  padding: 20px 0;
+  padding: 15px 10px;
   text-align: center;
 }
 
